--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ dependencies = [
     "alembic>=1.16.5",
     "asyncpg>=0.30.0",
     "fastapi>=0.118.0",
+    "pillow>=11.3.0",
     "pip>=25.2",
     "pydantic-settings>=2.11.0",
     "pydantic[email]>=2.11.9",
+    "python-multipart>=0.0.20",
     "sqlalchemy>=2.0.43",
     "uvicorn[standard]>=0.37.0",
 ]
